Github archive integration frontend

--- a/frontend/src/ui-kit/index.scss
+++ b/frontend/src/ui-kit/index.scss
@@ -3,6 +3,7 @@
 @import 'button/button';
 @import 'card/card';
 @import 'checkbox/checkbox';
+@import 'drawer/drawer';
 @import 'dropdown/dropdown';
 @import 'field/field';
 @import 'icon/icon';
