--- a/frontend/src/assets/scss/tabs.scss
+++ b/frontend/src/assets/scss/tabs.scss
@@ -3,17 +3,17 @@
     @apply m-0 border-none #{!important};
   }
   &__active-bar {
-    @apply bg-transparent #{!important};
+    @apply bg-primary-500 #{!important};
   }
   &__content {
     @apply overflow-visible;
   }
   &__item {
-    @apply font-normal text-gray-500 px-3 mr-2;
+    @apply font-normal text-gray-900 px-4;
     transition: all 0.2s ease;
-    @apply text-center rounded-md text-gray-500 #{!important};
+
     &.is-active {
-      @apply font-medium bg-primary-50 text-gray-900 #{!important};
+      @apply font-medium text-gray-900 #{!important};
     }
     &:hover {
       @apply text-primary-500 #{!important};
@@ -21,14 +21,5 @@
     &:focus.is-active.is-focus:not(:active) {
       box-shadow: none;
     }
-    &:nth-child(2) {
-      @apply pl-3 #{!important};
-    }
-  }
-  &__nav-scroll {
-    @apply pb-5;
-  }
-  &__nav-wrap::after {
-    @apply bg-gray-100 h-[1px];
   }
 }
