--- a/frontend/src/ui-kit/tabs/tabs.scss
+++ b/frontend/src/ui-kit/tabs/tabs.scss
@@ -1,12 +1,11 @@
-.c-tabs{
-  background: var(--lf-tabs-background);
+.c-tabs {
+  background: var(--lf-color-white);
   border-radius: var(--lf-tabs-radius);
   gap: var(--lf-tabs-spacing);
-  padding: var(--lf-tabs-padding);
   @apply flex relative whitespace-nowrap w-fit transition;
 
   &--small {
-    .c-tab{
+    .c-tab {
       --lf-tab-font-size: var(--lf-tabs-small-font-size);
       --lf-tab-line-height: var(--lf-tabs-small-line-height);
       --lf-tab-padding: var(--lf-tabs-small-padding);
@@ -14,7 +13,7 @@
   }
 
   &--medium {
-    .c-tab{
+    .c-tab {
       --lf-tab-font-size: var(--lf-tabs-medium-font-size);
       --lf-tab-line-height: var(--lf-tabs-medium-line-height);
       --lf-tab-padding: var(--lf-tabs-medium-padding);
@@ -22,7 +21,7 @@
   }
 }
 
-.c-tab{
+.c-tab {
   font-size: var(--lf-tab-font-size);
   line-height: var(--lf-tab-line-height);
   font-weight: var(--lf-tab-font-weight);
@@ -31,13 +30,12 @@
   border-radius: var(--lf-tab-radius);
   @apply flex items-center justify-center text-center cursor-pointer transition-all select-none;
 
-  &:hover{
+  &:hover {
     background: var(--lf-tab-hover-background);
   }
 
-  &.is-active{
+  &.is-active {
     background: var(--lf-tab-active-background);
     color: var(--lf-tab-active-text);
-    box-shadow: var(--lf-tab-active-shadow);
   }
 }
