added edit project group on the project groups page
Signed-off-by: Efren Lim <elim@linuxfoundation.org>

--- a/frontend/src/assets/scss/tabs.scss
+++ b/frontend/src/assets/scss/tabs.scss
@@ -13,7 +13,7 @@
     transition: all 0.2s ease;
 
     &.is-active {
-      @apply font-medium text-gray-900 #{!important};
+      @apply font-medium text-primary-900 #{!important};
     }
     &:hover {
       @apply text-primary-500 #{!important};
