--- a/frontend/src/ui-kit/index.scss
+++ b/frontend/src/ui-kit/index.scss
@@ -17,5 +17,6 @@
 @import 'spinner/spinner';
 @import 'table/table';
 @import 'tabs/tabs';
+@import 'timeline/timeline';
 @import 'tooltip/tooltip';
 
