--- a/frontend/src/ui-kit/timeline/timeline.scss
+++ b/frontend/src/ui-kit/timeline/timeline.scss
@@ -1,45 +1,29 @@
 .c-timeline {
-  @apply flex items-start gap-3;
-  &__group-label {
-    @apply flex items-center font-semibold text-medium leading-6 mb-1 truncate text-black hover:text-primary-500 transition block w-full overflow-hidden;
+  @apply flex flex-col;
+
+  &__item{
+    @apply flex
   }
 
-  &.c-single-item {
-    ::v-deep .c-timeline__item {
-      .c-timeline__item-content {
-        &::before {
-          @apply invisible;
-        }
-      }
-    }
+  &__item:last-child .c-timeline__prefix:after{
+    @apply hidden;
   }
 
-  ::v-deep .c-timeline__item {
-    @apply relative mb-4;
-    .c-timeline__item-dot {
-      @apply w-3 h-3 z-[2] bg-gray-200 rounded-full absolute top-[2px] -left-[30px] border-3 border-white;
-    }
-    .c-timeline__item-content {
-      @apply relative;
-      &::before {
+  &__prefix{
+    width: var(--lf-timeline-width);
+    min-width: var(--lf-timeline-width);
+    @apply flex flex-col items-center;
+
+
+    &:after{
         content: '';
-        @apply w-px bg-gray-200 absolute top-[2px] left-[-25px];
-        height: calc(100% + 25px);
-      }
+        @apply flex-grow block w-px bg-gray-300;
     }
+  }
 
-    &:first-child {
-      .c-timeline__item-dot {
-        @apply invisible;
-      }
-    }
-
-    &:last-child {
-      .c-timeline__item-content {
-        &::before {
-          @apply h-[5px];
-        }
-      }
-    }
+  &__dot{
+    @apply my-1 h-1 w-1 rounded-full bg-gray-300
   }
 }
+
+
