Remove Remix icon references and update font families
Remove preload and stylesheet links for Remix icons in index.html, delete Remix icon import in Storybook SCSS, and update checkbox and dropdown SCSS to use generic serif font instead of Remix icon font

Signed-off-by: Sameh16 <sameh_mohamed16@hotmail.com>

--- a/frontend/src/ui-kit/dropdown/dropdown.scss
+++ b/frontend/src/ui-kit/dropdown/dropdown.scss
@@ -68,7 +68,7 @@
       &:after{
         content: "\eb7b";
         font-size: 1rem;
-        font-family: 'remixicon', serif !important;
+        font-family: serif !important;
         font-style: normal;
         @apply text-primary-500;
       }
