--- a/frontend/src/ui-kit/checkbox/checkbox.scss
+++ b/frontend/src/ui-kit/checkbox/checkbox.scss
@@ -26,7 +26,7 @@
     // Icon
     &:before{
       content: "\eb7b";
-      font-family: 'remixicon', serif;
+      font-family: serif;
       position: absolute;
       left: 0;
       top: 0;
