Refactor project column components and update switch styling
- Move project column and count components to shared directory
- Update import paths in collections and projects modules
- Change switch checked background color to primary-500
- Improve template rendering in collection page

Signed-off-by: Sameh16 <sameh_mohamed16@hotmail.com>

--- a/frontend/config/styles/components/switch.scss
+++ b/frontend/config/styles/components/switch.scss
@@ -19,7 +19,7 @@
   --lf-switch-handle: var(--lf-color-white);
 
   // Checked
-  --lf-switch-checked-background: var(--lf-color-gray-900);
+  --lf-switch-checked-background: var(--lf-color-primary-500);
   --lf-switch-checked-handle: var(--lf-color-white);
 
   // Disabled Unchecked
