--- a/frontend/src/ui-kit/button/button.scss
+++ b/frontend/src/ui-kit/button/button.scss
@@ -153,6 +153,34 @@
     --lf-btn-loading-border: var(--lf-btn-secondary-loading-border);
   }
 
+  &--danger {
+    --lf-btn-text: var(--lf-btn-danger-text);
+    --lf-btn-background: var(--lf-btn-danger-background);
+    --lf-btn-border: var(--lf-btn-danger-border);
+    --lf-btn-shadow: var(--lf-btn-danger-shadow);
+
+    // Hover
+    --lf-btn-hover-text: var(--lf-btn-danger-hover-text);
+    --lf-btn-hover-background: var(--lf-btn-danger-hover-background);
+    --lf-btn-hover-border: var(--lf-btn-danger-hover-border);
+
+    // Active
+    --lf-btn-active-text: var(--lf-btn-danger-active-text);
+    --lf-btn-active-background: var(--lf-btn-danger-active-background);
+    --lf-btn-active-border: var(--lf-btn-danger-active-border);
+
+    // Disabled
+    --lf-btn-disabled-text: var(--lf-btn-danger-disabled-text);
+    --lf-btn-disabled-background: var(--lf-btn-danger-disabled-background);
+    --lf-btn-disabled-border: var(--lf-btn-danger-disabled-border);
+
+    // Loading
+    --lf-btn-loading-text: var(--lf-btn-danger-loading-text);
+    --lf-btn-loading-background: var(--lf-btn-danger-loading-background);
+    --lf-btn-loading-border: var(--lf-btn-danger-loading-border);
+  }
+
+
   &--primary-ghost {
     --lf-btn-text: var(--lf-btn-primary-ghost-text);
     --lf-btn-background: var(--lf-btn-primary-ghost-background);
