feat: Enhance insights project form with avatar and organization details
- Add avatar support in sub-project list dropdown
- Improve organization selection in insights project form
- Update form model to include organization logo and display name
- Adjust avatar styling for better visual representation

Signed-off-by: Sameh16 <sameh_mohamed16@hotmail.com>

--- a/frontend/src/ui-kit/avatar/avatar.scss
+++ b/frontend/src/ui-kit/avatar/avatar.scss
@@ -14,7 +14,7 @@
     font-size: calc(var(--lf-avatar-size) * var(--lf-avatar-text-size));
     line-height: var(--lf-avatar-size);
     color: var(--lf-avatar-color);
-    @apply absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 text-center uppercase font-semibold;
+    @apply absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 text-center uppercase font-semibold w-full;
   }
 
   img{
