Enhance button styles and color variables in Tailwind configuration
- Added new color variables for primary and gray shades to the Tailwind configuration for better design flexibility.
- Introduced a new 'bordered' button style across various components, replacing 'secondary' button types for consistency.
- Updated button styles in multiple components to utilize the new 'bordered' type, improving UI consistency.

Signed-off-by: [Your Name] <your_email@example.com>
Signed-off-by: Sameh16 <sameh_mohamed16@hotmail.com>

--- a/frontend/config/styles/components/button.scss
+++ b/frontend/config/styles/components/button.scss
@@ -88,6 +88,30 @@
   --lf-btn-secondary-loading-background: var(--lf-color-white);
   --lf-btn-secondary-loading-border: var(--lf-color-gray-200);
 
+
+  /* Bordered */
+  --lf-btn-bordered-text: var(--lf-color-gray-500);
+  --lf-btn-bordered-background: var(--lf-color-white);
+  --lf-btn-bordered-border: var(--lf-color-gray-250);
+  --lf-btn-bordered-shadow: var(--shadow-default);
+  // Hover
+  --lf-btn-bordered-hover-text: var(--lf-color-primary-500);
+  --lf-btn-bordered-hover-background: var(--lf-color-primary-125);
+  --lf-btn-bordered-hover-border: var(--lf-color-primary-150);
+  // Active
+  --lf-btn-bordered-active-text: var(--lf-color-primary-500);
+  --lf-btn-bordered-active-background: var(--lf-color-primary-125);
+  --lf-btn-bordered-active-border: var(--lf-color-primary-500);
+  // Disabled
+  --lf-btn-bordered-disabled-text: var(--lf-color-gray-400);
+  --lf-btn-bordered-disabled-background: var(--lf-color-white);
+  --lf-btn-bordered-disabled-border: var(--lf-color-gray-100);
+  // Loading
+  --lf-btn-bordered-loading-text: var(--lf-color-gray-400);
+  --lf-btn-bordered-loading-background: var(--lf-color-white);
+  --lf-btn-bordered-loading-border: var(--lf-color-gray-200);
+  
+
   /* Danger */
   --lf-btn-danger-text: var(--lf-color-white);
   --lf-btn-danger-background: var(--lf-color-red-500);
