--- a/frontend/config/styles/variables/_colors.scss
+++ b/frontend/config/styles/variables/_colors.scss
@@ -18,6 +18,8 @@
   --lf-color-primary-400: #33A9FF;
   --lf-color-primary-300: #66BFFF;
   --lf-color-primary-200: #99D4FF;
+  --lf-color-primary-150: #c6e2ff;
+  --lf-color-primary-125: #ecf5ff;
   --lf-color-primary-100: #CCEAFF;
   --lf-color-primary-50: #E6F4FF;
   --lf-color-primary-25: #F6FAFF;
@@ -38,6 +40,7 @@
   --lf-color-gray-500: #6B7280;
   --lf-color-gray-400: #9CA3AF;
   --lf-color-gray-300: #D1D5DB;
+  --lf-color-gray-250: #e6e6e6;
   --lf-color-gray-200: #E5E7EB;
   --lf-color-gray-100: #F3F4F6;
   --lf-color-gray-50: #F9FAFB;
