--- a/frontend/src/ui-kit/button/button.scss
+++ b/frontend/src/ui-kit/button/button.scss
@@ -153,6 +153,33 @@
     --lf-btn-loading-border: var(--lf-btn-secondary-loading-border);
   }
 
+  &--bordered {
+    --lf-btn-text: var(--lf-btn-bordered-text);
+    --lf-btn-background: var(--lf-btn-bordered-background);
+    --lf-btn-border: var(--lf-btn-bordered-border);
+    --lf-btn-shadow: var(--lf-btn-bordered-shadow);
+
+    // Hover
+    --lf-btn-hover-text: var(--lf-btn-bordered-hover-text);
+    --lf-btn-hover-background: var(--lf-btn-bordered-hover-background);
+    --lf-btn-hover-border: var(--lf-btn-bordered-hover-border);
+
+    // Active
+    --lf-btn-active-text: var(--lf-btn-bordered-active-text);
+    --lf-btn-active-background: var(--lf-btn-bordered-active-background);
+    --lf-btn-active-border: var(--lf-btn-bordered-active-border);
+
+    // Disabled
+    --lf-btn-disabled-text: var(--lf-btn-bordered-disabled-text);
+    --lf-btn-disabled-background: var(--lf-btn-bordered-disabled-background);
+    --lf-btn-disabled-border: var(--lf-btn-bordered-disabled-border);
+
+    // Loading
+    --lf-btn-loading-text: var(--lf-btn-bordered-loading-text);
+    --lf-btn-loading-background: var(--lf-btn-bordered-loading-background);
+    --lf-btn-loading-border: var(--lf-btn-bordered-loading-border);
+  }
+
   &--danger {
     --lf-btn-text: var(--lf-btn-danger-text);
     --lf-btn-background: var(--lf-btn-danger-background);
