--- a/frontend/config/styles/components/button.scss
+++ b/frontend/config/styles/components/button.scss
@@ -181,6 +181,30 @@
   --lf-btn-secondary-ghost-loading-border: var(--lf-color-transparent);
 
 
+  /* Secondary Gray */
+  --lf-btn-secondary-gray-text: var(--lf-color-primary-500);
+  --lf-btn-secondary-gray-background: linear-gradient(180deg, var(--lf-color-white) 0%, var(--lf-color-gray-250) 100%);
+  --lf-btn-secondary-gray-border: var(--lf-color-gray-250);
+  --lf-btn-secondary-gray-shadow: var(--shadow-none);
+  // Hover
+  --lf-btn-secondary-gray-hover-text: var(--lf-color-primary-500);
+  --lf-btn-secondary-gray-hover-background:  linear-gradient(180deg, var(--lf-color-white) 0%, var(--lf-color-gray-250) 100%);
+  --lf-btn-secondary-gray-hover-border: var(--lf-color-gray-250);
+  // Active
+  --lf-btn-secondary-gray-active-text: var(--lf-color-primary-500);
+  --lf-btn-secondary-gray-active-background: linear-gradient(180deg, var(--lf-color-white) 0%, var(--lf-color-gray-250) 100%);
+  --lf-btn-secondary-gray-active-border: var(--lf-color-gray-250);
+  // Disabled
+  --lf-btn-secondary-gray-disabled-text: var(--lf-color-gray-400);
+  --lf-btn-secondary-gray-disabled-background: linear-gradient(180deg, var(--lf-color-white) 0%, var(--lf-color-gray-100) 100%);
+  --lf-btn-secondary-gray-disabled-border: var(--lf-color-gray-100);
+  // Loading
+  --lf-btn-secondary-gray-loading-text: var(--lf-color-gray-400);
+  --lf-btn-secondary-gray-loading-background: var(--lf-color-transparent);
+  --lf-btn-secondary-gray-loading-border: var(--lf-color-transparent);
+  
+  
+
   /* Secondary Ghost Light */
   --lf-btn-secondary-ghost-light-text: var(--lf-color-gray-500);
   --lf-btn-secondary-ghost-light-background: var(--lf-color-transparent);
