--- a/frontend/config/styles/components/switch.scss
+++ b/frontend/config/styles/components/switch.scss
@@ -23,20 +23,24 @@
   --lf-switch-checked-handle: var(--lf-color-white);
 
   // Disabled Unchecked
-  --lf-switch-disabled-unchecked-background: var(--lf-color-gray-100);
   --lf-switch-disabled-unchecked-handle: var(--lf-color-white);
 
   // Disabled Checked
-  --lf-switch-disabled-checked-background: var(--lf-color-gray-400);
   --lf-switch-disabled-checked-handle: var(--lf-color-white);
 
   /* ---------------------------------- *\
            Switch sizes
   \* ---------------------------------- */
 
+  /* Tiny */
+  --lf-switch-tiny-height: #{rem(16)};
+  --lf-switch-tiny-width: #{rem(30)};
+  --lf-switch-tiny-font-size: #{rem(12)};
+  --lf-switch-tiny-line-height: #{rem(15)};
+
   /* Small */
   --lf-switch-small-height: #{rem(20)};
-  --lf-switch-small-width: #{rem(36)};
+  --lf-switch-small-width: #{rem(40)};
   --lf-switch-small-font-size: #{rem(13)};
   --lf-switch-small-line-height: #{rem(16.25)};
 
