Add large checkbox size and update checkbox components
Signed-off-by: Sameh16 <sameh_mohamed16@hotmail.com>

--- a/frontend/config/styles/components/checkbox.scss
+++ b/frontend/config/styles/components/checkbox.scss
@@ -46,9 +46,26 @@
   --lf-checkbox-small-size: #{rem(14)};
   --lf-checkbox-small-font-size: #{rem(13)};
   --lf-checkbox-small-line-height: 1.25;
+  --lf-checkbox-small-mark-left: #{rem(5)};
+  --lf-checkbox-small-mark-top: #{rem(1.5)};
+  --lf-checkbox-small-mark-height: #{rem(7)};
+  --lf-checkbox-small-mark-border: #{rem(1)};
 
   /* Medium */
   --lf-checkbox-medium-size: #{rem(16)};
   --lf-checkbox-medium-font-size: #{rem(14)};
   --lf-checkbox-medium-line-height: 1.25;
+  --lf-checkbox-medium-mark-left: #{rem(6)};
+  --lf-checkbox-medium-mark-top: #{rem(3)};
+  --lf-checkbox-medium-mark-height: #{rem(7)};
+  --lf-checkbox-medium-mark-border: #{rem(1)};
+  
+  /* Large */
+  --lf-checkbox-large-size: #{rem(20)};
+  --lf-checkbox-large-font-size: #{rem(14)};
+  --lf-checkbox-large-line-height: 1.25;
+  --lf-checkbox-large-mark-left: #{rem(8)};
+  --lf-checkbox-large-mark-top: #{rem(2)};
+  --lf-checkbox-large-mark-height: #{rem(10)};
+  --lf-checkbox-large-mark-border: #{rem(2)};
 }
