Refactor checkbox components and styles for improved consistency and usability
Signed-off-by: Sameh16 <sameh_mohamed16@hotmail.com>

--- a/frontend/src/ui-kit/checkbox/checkbox.scss
+++ b/frontend/src/ui-kit/checkbox/checkbox.scss
@@ -3,7 +3,7 @@
   line-height: var(--lf-checkbox-line-height);
   font-weight: var(--lf-checkbox-text-font-weight);
   color: var(--lf-checkbox-text-color);
-  @apply inline-flex flex-wrap relative mr-7.5 mt-2;
+  @apply inline-flex items-center flex-wrap relative mr-7.5 mt-2;
 
   input {
     height: var(--lf-checkbox-size);
