Refactor Tag component: change span to div for better structure and update styles for close icon and rounded tag
Signed-off-by: Sameh16 <sameh_mohamed16@hotmail.com>

--- a/frontend/src/ui-kit/tag/tag.scss
+++ b/frontend/src/ui-kit/tag/tag.scss
@@ -4,12 +4,12 @@
   .c-tag-close-icon {
     @apply ml-1.5 cursor-pointer text-gray-400;
     &:hover {
-      @apply text-white bg-gray-400 rounded-[50%];
+      @apply text-white bg-gray-400 rounded-full;
     }
   }
 
   &--rounded {
-    border-radius: 50px;
+    @apply rounded-full
   }
 
   // Size Modifiers
