--- a/frontend/src/ui-kit/table/table.scss
+++ b/frontend/src/ui-kit/table/table.scss
@@ -19,7 +19,7 @@
   td,
   th {
     &.is-sticky {
-      @apply sticky pl-3 bg-white left-0 right-0 z-20;
+      @apply sticky pl-3 bg-inherit left-0 right-0 z-20;
 
       &:before {
         content: "";
@@ -41,6 +41,9 @@
 
     thead {
       @apply border-b border-gray-100;
+      tr {
+        @apply bg-white;
+      }
       th {
         @apply h-12 text-xs leading-5 font-semibold text-gray-400 text-left whitespace-nowrap;
       }
@@ -49,9 +52,16 @@
     tbody {
       tr,
       .tr {
+        @apply bg-white;
+      
         &:not(:last-child) {
           @apply border-b border-gray-100;
         }
+
+        &.is-selected {
+          @apply bg-primary-25;
+        }
+      
       }
 
       td {
