--- a/frontend/src/ui-kit/table/table.scss
+++ b/frontend/src/ui-kit/table/table.scss
@@ -110,3 +110,8 @@
   }
 }
 
+
+.app-list-table-bulk-actions {
+  @apply flex items-center justify-start absolute top-0 right-0 z-30 bg-white rounded-tr-xl p-2 h-13 w-[calc(100%-75px)];
+}
+
