--- a/frontend/src/ui-kit/pill/pill.scss
+++ b/frontend/src/ui-kit/pill/pill.scss
@@ -24,4 +24,8 @@
   &--transparent {
     @apply bg-transparent text-gray-900;
   }
+
+  &--outline {
+    @apply bg-transparent text-gray-900 outline-1 outline-gray-200;
+  }
 }
