fix: router-link

--- a/frontend/src/ui-kit/pill/pill.scss
+++ b/frontend/src/ui-kit/pill/pill.scss
@@ -26,6 +26,6 @@
   }
 
   &--outline {
-    @apply bg-transparent text-gray-900 outline-1 outline-gray-200;
+    @apply bg-transparent text-gray-900 outline-1 outline-gray-200 outline;
   }
 }
