feat: add Toast notification system and custom gray color variable
Signed-off-by: Sameh16 <sameh_mohamed16@hotmail.com>

--- a/frontend/config/styles/variables/_colors.scss
+++ b/frontend/config/styles/variables/_colors.scss
@@ -37,6 +37,7 @@
   --lf-color-gray-800: #1F2937;
   --lf-color-gray-700: #374151;
   --lf-color-gray-600: #4B5563;
+  --lf-color-gray-550: #909399; // Custom gray for specific use
   --lf-color-gray-500: #6B7280;
   --lf-color-gray-400: #9CA3AF;
   --lf-color-gray-300: #D1D5DB;
